--- a/calculators/style.css
+++ b/calculators/style.css
@@ -2,6 +2,8 @@
   width: 100%;
   max-width: 800px;
   flex-direction: column;
+  font-family: system-ui, sans-serif;
+  font-family: var(--contentfont);
 }
 .flex-form, .flex-form section {
   display: flex;
@@ -42,9 +44,16 @@
   display: flex;
   flex-direction: column;
 }
+.flex-form header h3 {
+  font-family: var(--headlinefont);
+}
+.flex-form header em {
+  font-family: var(--contentfont);
+}
 .flex-form label strong {
   color: #062236;
   margin-bottom: 6px;
+  font-family: var(--headlinefont);
 }
 .flex-form .split-container {
   display: flex;
