adjust select/strong label color

--- a/calculators/style.css
+++ b/calculators/style.css
@@ -77,7 +77,7 @@
 }
 .flex-form .split-container select, .flex-form .split-container strong {
   border-left: 1px solid #e9edf0;
-  background: #FCFDFE;
+  background: #f5f6f7;
   font-size: 12px;
   height: 100%;
   align-items: center;
