--- a/calculators/style.scss
+++ b/calculators/style.scss
@@ -103,7 +103,7 @@
 		
 		select, strong {
 			border-left: 1px solid #e9edf0;
-			background: #FCFDFE;
+			background: #f5f6f7;
 			font-size: 12px;
 			height: 100%;
 			align-items: center;
