--- a/calculators/style.scss
+++ b/calculators/style.scss
@@ -100,8 +100,12 @@
 			text-align: right;
 			background: #e9edf0;
 		}
+
+		select[name] {
+			flex-grow: 1;
+		}
 		
-		select, strong {
+		select[tabindex="-1"], strong {
 			border-left: 1px solid #e9edf0;
 			background: #f5f6f7;
 			font-size: 12px;
@@ -111,11 +115,12 @@
 			display: flex;
 		}
 		
-		select {
+		select[tabindex="-1"] {
 			flex-basis: 56px;
 			width: 56px;
 			
-			& + input {
+			& + input,
+			& + select {
 				flex-basis: calc( 100% - 56px );
 				width: calc( 100% - 56px );
 			}
@@ -128,7 +133,7 @@
 		&.reverse {
 			flex-direction: row;
 			
-			select, strong {
+			select[tabindex="-1"], strong {
 				border-left: none;
 				border-right: 1px solid #e9edf0;
 			}
