--- a/styles/scss/partials/_menu.scss
+++ b/styles/scss/partials/_menu.scss
@@ -1,11 +1,11 @@
 #nav-menu-popup {
 	.nav-menu-body {
-		background-color: #fff;
+		background-color: #fff !important;
 
 		li.nav-menu-item {
 			& > .nav-menu-item-content {
 				& > a {
-					padding: 12px;
+					padding: 12px !important;
 				}
 			}
 		}
