--- a/styles/css/style-no-modules.css
+++ b/styles/css/style-no-modules.css
@@ -4,10 +4,12 @@
 #nav-menu-popup .nav-menu-body li.nav-menu-item > .nav-menu-item-content > a {
   padding: 12px !important;
 }
-
-.dropdown .dropdown-menu li {
+#nav-menu-popup .nav-menu-body li.nav-menu-item.dropdown ul li {
   text-align: left !important;
-  padding: 1em !important;
+  padding: 0 !important;
+}
+#nav-menu-popup .nav-menu-body li.nav-menu-item.dropdown ul li a {
+  padding: 12px !important;
 }
 
 /*# sourceMappingURL=style-no-modules.css.map */
