--- a/styles/scss/partials/_menu.scss
+++ b/styles/scss/partials/_menu.scss
@@ -8,11 +8,19 @@
 					padding: 12px !important;
 				}
 			}
+
+			&.dropdown {
+				ul {
+					li {
+						text-align: left !important;
+						padding: 0 !important;
+
+						a {
+							padding: 12px !important;
+						}
+					}
+				}
+			}
 		}
 	}
-}
-
-.dropdown .dropdown-menu li {
-	text-align: left !important;
-	padding: 1em !important;
 }
