--- a/styles/scss/masterful-header.scss
+++ b/styles/scss/masterful-header.scss
@@ -42,6 +42,12 @@
 					.c-column:last-child { // Button Container
 						flex-shrink: 0 !important;
 						width: 180px !important;
+
+						& > *,
+						& > * * {
+							width: 180px !important;
+							padding: 0;
+						}
 					}
 
 					div[id*="button-"].c-button .main-heading-button {
